# guardian-tales-discord-bot

./: .gitignore  CMakeLists.txt  readme.md
.cache/clangd/index/: DataBase.cpp.BF1F8B2EE0530F10.idx  DataBase.hpp.B0E4A634F539EB9E.idx  DiscordBot.cpp.C3FD2A41397CFBEC.idx  DiscordBot.hpp.046129251E203A60.idx  Main.cpp.616EFEEF97BA434A.idx  api.h.7E9D60CC50B8F9F7.idx  app.h.E05CF5CBFD4F36F1.idx  appcommand.h.81029C7007E381EC.idx  application.h.D4BF58F6EDCA01D4.idx  auditlog.h.BD9F23BA789D39A0.idx  auth.h.229FA92875523405.idx  automod.h.D0045FFAA75EDB3D.idx  ban.h.A9B2159BE446A681.idx  cache.h.F29E24E43206F42A.idx  callback.h.D77C9507618049C0.idx  channel.h.12AE6CC27E2AD206.idx  charef.h.D3E83C5398700F6B.idx  cluster.h.18F589E348C0F977.idx  cluster_sync_calls.h.0A16398787619244.idx  colors.h.AE7F9D36F4777BF8.idx  commandhandler.h.C5C1203E7CDF9FFD.idx  common.h.6325738F2067227C.idx  common.h.81F27F16CA69E465.idx  controller.h.CB823EF34952BD73.idx  credential.h.BC64CA24919B573E.idx  data_process.h.DE9CF4A05230BFB2.idx  def.h.EA23DF78B3CE654D.idx  discordclient.h.2FCC9C1ADE7A1CC4.idx  discordevents.h.0D198A5016D781DF.idx  discordvoiceclient.h.1F4F5F39A5116DD8.idx  dispatcher.h.630D272369351E55.idx  dpp.h.BADE10C7E1C31440.idx  dtemplate.h.B3C6AD54C28282BC.idx  emoji.h.F35FA0CD9234DD52.idx  encoding.h.40A1F1E8CDCADB1D.idx  event.h.E6EDC50745EA7465.idx  exception.h.F1A23BF588EDCFA8.idx  export.h.B8F7351B4AAF26EE.idx  future.h.362DF09237766DA2.idx  (+74 more)
src/: DataBase.hpp  DiscordBot.hpp  Main.cpp  redeemer.hpp  scraper.hpp
template/: Coupon.json  Guild.json
(+1 files in other folders)
